Partially Resolves #26 - Added the ability to configure outer spacing on the bar.

--- a/scss/style/bar/bar.scss
+++ b/scss/style/bar/bar.scss
@@ -127,9 +127,9 @@
 }
 
 .box-left {
-  margin-left: 1.9rem;
+  margin-left: $bar-outer_spacing;
 }
 
 .box-right {
-  margin-right: 1.9rem;
+  margin-right: $bar-outer_spacing;
 }
